// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress renders snapshot of a progress 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  color: #65707C;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 12px;
  line-height: 1;
  width: 100%;
}

.emotion-1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
}

.emotion-2 {
  background-color: rgba(5, 25, 45, 0.15);
  border: none;
  border-radius: 4px;
  -webkit-clip-path: url(#progress-123abC-clip);
  clip-path: url(#progress-123abC-clip);
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 8px;
  width: 100%;
}

.emotion-2::-webkit-progress-bar {
  background-color: inherit;
  border-radius: 4px;
}

.emotion-2::-moz-progress-bar {
  background-color: #03EF62;
  border-radius: 4px;
  -webkit-transition: width 1s ease-in-out;
  transition: width 1s ease-in-out;
}

.emotion-2::-webkit-progress-value {
  background-color: #03EF62;
  border-radius: 4px;
  -webkit-transition: width 1s ease-in-out;
  transition: width 1s ease-in-out;
}

<div
  class="emotion-0"
  data-testid="progress-wrapper"
>
  <div
    class="emotion-1"
  >
    <progress
      aria-label="Default progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="40"
      class="emotion-2"
      id="progress-123abC"
      max="100"
      value="40"
    />
  </div>
  <label
    for="progress-123abC"
  >
    <span
      aria-hidden="true"
    >
      40%
    </span>
  </label>
</div>
`;

exports[`Progress renders snapshot of a progress in steps mode 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  color: #65707C;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 12px;
  line-height: 1;
  width: 100%;
}

.emotion-1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
}

.emotion-2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  height: 1px;
}

.emotion-3 {
  x: calc(0);
  width: calc(20%);
  height: 8px;
}

.emotion-4 {
  x: calc(20% + 4px);
  width: calc(20% - 4px);
  height: 8px;
}

.emotion-5 {
  x: calc(40% + 4px);
  width: calc(20% - 4px);
  height: 8px;
}

.emotion-6 {
  x: calc(60% + 4px);
  width: calc(20% - 4px);
  height: 8px;
}

.emotion-7 {
  x: calc(80% + 4px);
  width: calc(20% - 4px);
  height: 8px;
}

.emotion-8 {
  background-color: rgba(5, 25, 45, 0.15);
  border: none;
  border-radius: 4px;
  -webkit-clip-path: url(#progress-123abC-clip);
  clip-path: url(#progress-123abC-clip);
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 8px;
  width: 100%;
}

.emotion-8::-webkit-progress-bar {
  background-color: inherit;
  border-radius: 4px;
}

.emotion-8::-moz-progress-bar {
  background-color: #03EF62;
  border-radius: 4px;
  -webkit-transition: width 1s ease-in-out;
  transition: width 1s ease-in-out;
}

.emotion-8::-webkit-progress-value {
  background-color: #03EF62;
  border-radius: 4px;
  -webkit-transition: width 1s ease-in-out;
  transition: width 1s ease-in-out;
}

<div
  class="emotion-0"
  data-testid="progress-wrapper"
>
  <div
    class="emotion-1"
  >
    <svg
      class="emotion-2"
    >
      <defs>
        <clippath
          id="progress-123abC-clip"
        >
          <rect
            class="emotion-3"
            rx="4"
            width="20%"
          />
          <rect
            class="emotion-4"
            rx="4"
            width="20%"
          />
          <rect
            class="emotion-5"
            rx="4"
            width="20%"
          />
          <rect
            class="emotion-6"
            rx="4"
            width="20%"
          />
          <rect
            class="emotion-7"
            rx="4"
            width="20%"
          />
        </clippath>
      </defs>
    </svg>
    <progress
      aria-label="Progress in steps mode 2 out of 5 steps"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="2"
      class="emotion-8"
      id="progress-123abC"
      max="5"
      value="2"
    />
  </div>
  <label
    for="progress-123abC"
  >
    <span
      aria-hidden="true"
    >
      2 / 5
    </span>
  </label>
</div>
`;

exports[`Progress renders snapshot of a progress with custom label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  color: #65707C;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 12px;
  line-height: 1;
  width: 100%;
}

.emotion-1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
}

.emotion-2 {
  background-color: rgba(5, 25, 45, 0.15);
  border: none;
  border-radius: 4px;
  -webkit-clip-path: url(#progress-123abC-clip);
  clip-path: url(#progress-123abC-clip);
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 8px;
  width: 100%;
}

.emotion-2::-webkit-progress-bar {
  background-color: inherit;
  border-radius: 4px;
}

.emotion-2::-moz-progress-bar {
  background-color: #03EF62;
  border-radius: 4px;
  -webkit-transition: width 1s ease-in-out;
  transition: width 1s ease-in-out;
}

.emotion-2::-webkit-progress-value {
  background-color: #03EF62;
  border-radius: 4px;
  -webkit-transition: width 1s ease-in-out;
  transition: width 1s ease-in-out;
}

<div
  class="emotion-0"
  data-testid="progress-wrapper"
>
  <div
    class="emotion-1"
  >
    <progress
      aria-label="Progress with no label"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="40"
      class="emotion-2"
      id="progress-123abC"
      max="100"
      value="40"
    />
  </div>
  <label
    for="progress-123abC"
  >
    Custom Label
  </label>
</div>
`;

exports[`Progress renders snapshot of a progress with no label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  color: #65707C;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 12px;
  line-height: 1;
  width: 100%;
}

.emotion-1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
}

.emotion-2 {
  background-color: rgba(5, 25, 45, 0.15);
  border: none;
  border-radius: 4px;
  -webkit-clip-path: url(#progress-123abC-clip);
  clip-path: url(#progress-123abC-clip);
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 8px;
  width: 100%;
}

.emotion-2::-webkit-progress-bar {
  background-color: inherit;
  border-radius: 4px;
}

.emotion-2::-moz-progress-bar {
  background-color: #03EF62;
  border-radius: 4px;
  -webkit-transition: width 1s ease-in-out;
  transition: width 1s ease-in-out;
}

.emotion-2::-webkit-progress-value {
  background-color: #03EF62;
  border-radius: 4px;
  -webkit-transition: width 1s ease-in-out;
  transition: width 1s ease-in-out;
}

<div
  class="emotion-0"
  data-testid="progress-wrapper"
>
  <div
    class="emotion-1"
  >
    <progress
      aria-label="Progress with no label"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="40"
      class="emotion-2"
      id="progress-123abC"
      max="100"
      value="40"
    />
  </div>
</div>
`;

exports[`Progress renders snapshot of an inverted progress 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  color: #9BA3AB;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 12px;
  line-height: 1;
  width: 100%;
}

.emotion-1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
}

.emotion-2 {
  background-color: rgba(255, 255, 255, 0.2);
  border: none;
  border-radius: 4px;
  -webkit-clip-path: url(#progress-123abC-clip);
  clip-path: url(#progress-123abC-clip);
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 8px;
  width: 100%;
}

.emotion-2::-webkit-progress-bar {
  background-color: inherit;
  border-radius: 4px;
}

.emotion-2::-moz-progress-bar {
  background-color: #03EF62;
  border-radius: 4px;
  -webkit-transition: width 1s ease-in-out;
  transition: width 1s ease-in-out;
}

.emotion-2::-webkit-progress-value {
  background-color: #03EF62;
  border-radius: 4px;
  -webkit-transition: width 1s ease-in-out;
  transition: width 1s ease-in-out;
}

<div
  class="emotion-0"
  data-testid="progress-wrapper"
>
  <div
    class="emotion-1"
  >
    <progress
      aria-label="Inverted progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="40"
      class="emotion-2"
      id="progress-123abC"
      max="100"
      value="40"
    />
  </div>
  <label
    for="progress-123abC"
  >
    <span
      aria-hidden="true"
    >
      40%
    </span>
  </label>
</div>
`;
